// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render Pagination component correctly 1`] = `
<div>
  <ul
    className="Pagination__PageButtonGroup-s1k0mkaj-0 jjzgbM"
  >
    <li>
      <a
        className="s1rf1ro1-0-LinkButton-fjdEfS gPmBNX NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with both next page link and previous page link correctly 1`] = `
<div>
  <ul
    className="Pagination__PageButtonGroup-s1k0mkaj-0 jjzgbM"
  >
    <li>
      <a
        className="s1rf1ro1-0-LinkButton-fjdEfS jhXxoW NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        ←
      </a>
    </li>
    <li>
      <a
        className="s1rf1ro1-0-LinkButton-fjdEfS jhXxoW NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
    <li>
      <a
        className="s1rf1ro1-0-LinkButton-fjdEfS gPmBNX NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        2
      </a>
    </li>
    <li>
      <a
        className="s1rf1ro1-0-LinkButton-fjdEfS jhXxoW NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        3
      </a>
    </li>
    <li>
      <a
        className="s1rf1ro1-0-LinkButton-fjdEfS jhXxoW NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        →
      </a>
    </li>
  </ul>
</div>
`;

exports[`It should render Pagination component with previous page link correctly 1`] = `
<div>
  <ul
    className="Pagination__PageButtonGroup-s1k0mkaj-0 jjzgbM"
  >
    <li>
      <a
        className="s1rf1ro1-0-LinkButton-fjdEfS jhXxoW NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        ←
      </a>
    </li>
    <li>
      <a
        className="s1rf1ro1-0-LinkButton-fjdEfS jhXxoW NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        1
      </a>
    </li>
    <li>
      <a
        className="s1rf1ro1-0-LinkButton-fjdEfS jhXxoW NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        2
      </a>
    </li>
    <li>
      <a
        className="s1rf1ro1-0-LinkButton-fjdEfS gPmBNX NormalLink-s877q9z-0 coaBWT"
        onClick={[Function]}
        style={Object {}}
      >
        3
      </a>
    </li>
  </ul>
</div>
`;
